--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
-        <a href="{{ https://rpassareti.github.io/curriculo }}" class="btn">Currículo</a>
-        <a href="{{ projfacul.md }}" class="btn">Projeto</a>
+        <a href=" https://rpassareti.github.io/curriculo " class="btn">Currículo</a>
+        <a href=" projfacul.md " class="btn">Projeto</a>
         
       </div>
     </header>
