--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,8 @@
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
         <a href=" https://rpassareti.github.io/curriculo " class="btn">Currículo</a>
-        <a href=" projfacul.md " class="btn">Projeto</a>
+        <a href=" https://rpassareti.github.io/projfacul " class="btn">Projetos Faculdade</a>
+        <a href=" https://rpassareti.github.io/projpubl " class="btn">Projetos Publicados</a>
         
       </div>
     </header>
